// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly activity 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "opacity": 1,
    }
  }
>
  <Text>
    someUser
     
    tagged you in a post
  </Text>
</View>
`;

exports[`renders correctly comment 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "opacity": 1,
    }
  }
>
  <Text>
    someUser
     
    tagged you in a comment
  </Text>
</View>
`;
